# ur5_moveit_config

./: .gitignore  .setup_assistant  CMakeLists.txt  README.md  package.xml
config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  ur5_assembly.ros2_control.xacro  ur5_assembly.srdf  ur5_assembly.urdf.xacro
launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  ur_moveit.launch.py  warehouse_db.launch.py
scripts/: test_moveit_config.py
